<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_ico"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message_ico"
        android:title="@string/title_message" />
    <item
        android:id="@+id/placeholder"
        android:icon="@null"
        android:title=""
        android:checkable="false"
        android:enabled="false"/>
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_ico"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_ico"
        android:title="@string/title_profile" />

</menu>