<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_profile_back"
        android:scaleType="center"
        android:elevation="0dp"
       android:translationY="-220dp"
        />
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_profile_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_10"
                    app:layout_constraintBottom_toTopOf="@id/cl_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/ic_back_border">

                    <ImageView
                        android:id="@+id/iv_profile_photo"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/cl_user_stats"
                    app:layout_constraintTop_toBottomOf="@id/cl_profile_photo">

                    <TextView
                        style="@style/profile_name_style"
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="test name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/profile_username_style"
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="test name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_user_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cl_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        style="@style/profile_stats_style"
                        tools:text="12"
                        android:id="@+id/tv_profile_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_profile_follows"
                        app:layout_constraintStart_toEndOf="@id/tv_posts_title"
                        app:layout_constraintTop_toBottomOf="@id/tv_followers_title" />

                    <TextView
                        android:id="@+id/tv_profile_follows"
                        style="@style/profile_stats_style"
                        tools:text="12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_profile_followers"
                        app:layout_constraintTop_toBottomOf="@id/tv_follows_title" />

                    <TextView
                        android:id="@+id/tv_profile_posts"
                        style="@style/profile_stats_style"
                        tools:text="12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_followers_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_posts_title" />

                    <TextView
                        android:id="@+id/tv_followers_title"
                        style="@style/profile_stats_title_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/tv_profile_followers"
                        app:layout_constraintEnd_toEndOf="@id/tv_profile_followers"
                        app:layout_constraintStart_toStartOf="@id/tv_profile_followers"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/profile_followers" />

                    <TextView
                        android:id="@+id/tv_follows_title"
                        style="@style/profile_stats_title_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_follows"
                        app:layout_constraintBottom_toTopOf="@id/tv_profile_follows"
                        app:layout_constraintEnd_toEndOf="@id/tv_profile_follows"
                        app:layout_constraintStart_toStartOf="@id/tv_profile_follows"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_posts_title"
                        style="@style/profile_stats_title_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/tv_profile_posts"
                        app:layout_constraintEnd_toEndOf="@id/tv_profile_posts"
                        app:layout_constraintStart_toStartOf="@id/tv_profile_posts"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/profile_posts" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_image_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_user_stats">

                    <ImageView
                        android:id="@+id/iv_my_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_button_photos"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_saved_photo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_saved_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_button_saved"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_my_photo"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_20"
                android:layout_marginEnd="@dimen/space_20"
               android:paddingTop="@dimen/space_20"
                tools:listitem="@layout/profile_post_item"
                tools:itemCount="10"
                android:overScrollMode="never"
                android:background="@color/trans"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
